update commandline options and jvm option features